Tue Jun 03 20:14:34 2008  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: fix some capitalization issues, implement
	  a variable monitor dialog.  Also add code to save current console
	  but that is disabled due to VTE having useless (read: unusable)
	  API for getting at the buffer.  You require some private knowledge
	  to use the get_text_range function.  Otherwise the API is
	  pointless.

Thu May 22 01:10:40 2008  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c: fix identity matrix caching, setup type caches for
	  identity, zeros and ones

	* src/matop.c: move rref caching to gauss to speed up inverting
	  matrices in rref form etc...

Tue May 20 02:36:47 2008  Jiri (George) Lebl <jirka@5z.com>

	* lib/number_theory/primes.gel: update slightly the upper bound on
	  double checked mersenne prime exponents to newest value

Tue May 20 00:25:10 2008  Jiri (George) Lebl <jirka@5z.com>

	* src/matrixw.[ch], matop.c, src/eval.c, src/funclib.c:  Optimize
	  matrix manipulation a bit.  Don't be overly conservative with
	  making things private.  And OMG we used Gauss-Jordan instead of
	  backaddition.  Also when the matrix is not rational, do pivotting
	  (use largest entry, not first nonzero one)

	* src/mpwrap.c: fix mpw_abs if called with same arguments for in and
	  out and add mpw_abs_sq for getting the absolute value squared,
	  which doesn't involve a sqrt

	* src/genius.c, src/gnome-genius.c, src/eval.[ch], src/matrixw.c: 
	  init the_zero during the startup

	* src/mpzextra.c: very minor optimizations

	* src/Makefile.am: fix BUILDDIR setup

Mon May 19 19:56:37 2008  Jiri (George) Lebl <jirka@5z.com>

	* src/mpzextra.c: fix leak on mympz_is_prime.

Sun Feb 24 18:38:31 2008  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: update

Sun Feb 24 18:35:45 2008  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.c: print extra dict of a function by printing a list
	  of variable assignments before the function body.
