@@ -2,7 +2,10 @@ Changes to 1.0.3
 
 Syntax and semantical changes are marked with CHANGE:
 
-* Add IsMersennePrime, MersennePrimeExponents, IsDefined, undefine
+* Add "Save Console Output" menu item to save console contents
+* Add "Monitor a Variable" menu item to continuously monitor a single
+  variable
+* Add IsMersennePrimeExponent, MersennePrimeExponents, IsDefined, undefine
 * QuadraticFormula built in and more numerically stable
 * CHANGE: It's Fibonacci in correct spelling, short name is still fib
 * Calling internal functions is now slightly faster
